# fcat

./: .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint
.github/: dependabot.yml
.github/workflows/: rust.yml
assets/: buffers.key
src/: main.rs
