[package]
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
categories = [
    "development-tools",
]
description = "A faster cat for Linux using splice"
documentation = "https://github.com/mre/fcat"
homepage = "https://github.com/mre/fcat"
name = "fcat"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[dependencies]
nix = "0.17.0"

[dev-dependencies]
assert_cmd = "1.0.1"
proptest = "0.9.5"
tempfile = "3.1.0"
